Your brief description of the edit

--- a/Scripts/main.ipynb
+++ b/Scripts/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fb04d9ea",
    "metadata": {},
    "outputs": [
@@ -92,22 +92,18 @@
     "    'Stage': 'tumor_stage'\n",
     "})\n",
     "\n",
-    "# Select relevant columns and drop NA\n",
     "df_clean = df[['time', 'event', 'age', 'treatment', 'tumor_stage']].dropna()\n",
     "\n",
-    "# Map event column to binary\n",
     "df_clean['event'] = df_clean['event'].str.strip().str.lower().map({\n",
     "    'dead': 1, 'deceased': 1, 'alive': 0, 'censored': 0\n",
     "})\n",
     "df_clean = df_clean.dropna(subset=['event'])\n",
     "df_clean['event'] = df_clean['event'].astype(int)\n",
     "\n",
-    "# Clean and standardize treatment\n",
     "df_clean['treatment'] = df_clean['treatment'].str.strip().str.title()\n",
     "df_clean['treatment'] = df_clean['treatment'].replace({\n",
     "    'Chemo Rt Other': 'Chemo RT other',\n",
     "    'Postop Rt Alone': 'Postop RT alone',\n",
-    "    # Add other mappings if needed\n",
     "})\n",
     "\n",
     "print(\"Unique treatment groups after cleaning:\")\n",
@@ -121,9 +117,7 @@
     "\n",
     "kmf = KaplanMeierFitter()\n",
     "\n",
-    "# -----------------------------------------------\n",
-    "# 1. KM Curves by Treatment (with safety checks)\n",
-    "# -----------------------------------------------\n",
+    "# 1. KM Curves by Treatment\n",
     "plt.figure(figsize=(12, 7))\n",
     "for group in df_clean['treatment'].unique():\n",
     "    mask = df_clean['treatment'] == group\n",
@@ -149,9 +143,9 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "# -----------------------------------------------\n",
-    "# 2. KM Curves by Tumor Stage (with safety checks)\n",
-    "# -----------------------------------------------\n",
+    "\n",
+    "# 2. KM Curves by Tumor Stage\n",
+    "\n",
     "plt.figure(figsize=(12, 7))\n",
     "for stage in df_clean['tumor_stage'].unique():\n",
     "    mask = df_clean['tumor_stage'] == stage\n",
@@ -177,9 +171,8 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "# -----------------------------------------------\n",
     "# 3. Random Survival Forest\n",
-    "# -----------------------------------------------\n",
+    "\n",
     "X_rsf = df_clean[['age', 'tumor_stage', 'treatment']].copy()\n",
     "X_rsf['tumor_stage'] = LabelEncoder().fit_transform(X_rsf['tumor_stage'])\n",
     "X_rsf['treatment'] = LabelEncoder().fit_transform(X_rsf['treatment'])\n",
@@ -219,7 +212,6 @@
     "importances = permutation_importance_survival(rsf, X_rsf, y_rsf, n_repeats=3, random_state=42)\n",
     "print(f\"Permutation importance completed in {time.time() - start:.2f} seconds\")\n",
     "\n",
-    "# Ensure importances are numeric and no NaNs\n",
     "importances = np.array(importances, dtype=float)\n",
     "if np.isnan(importances).any():\n",
     "    importances = np.nan_to_num(importances)  # replace NaNs with 0\n",
