Add plot saving for Kaplan-Meier and RSF plots

--- a/Scripts/main.ipynb
+++ b/Scripts/main.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fb04d9ea",
+   "execution_count": 11,
+   "id": "563ce0bf",
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,9 @@
      "output_type": "stream",
      "text": [
       "Training Random Survival Forest...\n",
-      "RSF training completed in 0.98 seconds\n",
+      "RSF training completed in 0.99 seconds\n",
       "Calculating permutation importance...\n",
-      "Permutation importance completed in 16.35 seconds\n"
+      "Permutation importance completed in 15.84 seconds\n"
      ]
     },
     {
@@ -109,9 +109,7 @@
     "print(\"Unique treatment groups after cleaning:\")\n",
     "print(df_clean['treatment'].unique())\n",
     "\n",
-    "# Clean and standardize tumor_stage\n",
     "df_clean['tumor_stage'] = df_clean['tumor_stage'].str.strip().str.upper()\n",
-    "\n",
     "print(\"Unique tumor stages after cleaning:\")\n",
     "print(df_clean['tumor_stage'].unique())\n",
     "\n",
@@ -141,11 +139,10 @@
     "plt.ylabel(\"Survival Probability\")\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "plt.savefig(\"km_curves_by_treatment.png\")  # Save plot\n",
     "plt.show()\n",
     "\n",
-    "\n",
     "# 2. KM Curves by Tumor Stage\n",
-    "\n",
     "plt.figure(figsize=(12, 7))\n",
     "for stage in df_clean['tumor_stage'].unique():\n",
     "    mask = df_clean['tumor_stage'] == stage\n",
@@ -169,6 +166,7 @@
     "plt.ylabel(\"Survival Probability\")\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
+    "plt.savefig(\"km_curves_by_tumor_stage.png\")  # Save plot\n",
     "plt.show()\n",
     "\n",
     "# 3. Random Survival Forest\n",
@@ -188,7 +186,7 @@
     "def permutation_importance_survival(estimator, X, y, n_repeats=3, random_state=None):\n",
     "    rng = np.random.default_rng(random_state)\n",
     "    baseline_pred = estimator.predict(X)\n",
-    "    baseline_score = concordance_index_censored(y['event'], y['time'], -baseline_pred)[0]\n",
+    "    baseline_score = concordance_index_censored(y['event'].astype(bool), y['time'], -baseline_pred)[0]\n",
     "\n",
     "    importances = np.zeros(X.shape[1])\n",
     "\n",
@@ -199,7 +197,7 @@
     "        for _ in range(n_repeats):\n",
     "            X_permuted[col] = rng.permutation(X_permuted[col].values)\n",
     "            pred = estimator.predict(X_permuted)\n",
-    "            score = concordance_index_censored(y['event'], y['time'], -pred)[0]\n",
+    "            score = concordance_index_censored(y['event'].astype(bool), y['time'], -pred)[0]\n",
     "            scores.append(baseline_score - score)\n",
     "            X_permuted[col] = X[col]\n",
     "\n",
@@ -224,6 +222,7 @@
     "plt.xlabel(\"Importance (decrease in C-index)\")\n",
     "plt.ylabel(\"Feature\")\n",
     "plt.grid(True)\n",
+    "plt.savefig(\"rsf_permutation_importance.png\")  # Save plot\n",
     "plt.show()\n"
    ]
   }
